.blackbox/tmp/shell_tool_878a29a83bee.log
 ⚠ Warning: Next.js inferred your workspace root, but it may not be correct.
 We detected multiple lockfiles and selected the directory of /Users/guillaume_deramchi/package-lock.json as the root directory.
 To silence this warning, set `turbopack.root` in your Next.js config, or consider removing one of the lockfiles if it's not needed.
   See https://nextjs.org/docs/app/api-reference/config/next-config-js/turbopack#root-directory for more information.
 Detected additional lockfiles: 
   * /Users/guillaume_deramchi/Documents/hack-station-f/package-lock.json

   ▲ Next.js 16.0.3 (Turbopack)
   - Local:         http://localhost:3000
   - Network:       http://172.20.10.3:3000
   - Environments: .env.local, .env

 ✓ Starting...
 ⚠ The "middleware" file convention is deprecated. Please use "proxy" instead. Learn more: https://nextjs.org/docs/messages/middleware-to-proxy
 ✓ Ready in 545ms
[next-auth][warn][DEBUG_ENABLED] 
https://next-auth.js.org/warnings#debug_enabled
 GET / 200 in 1647ms (compile: 1515ms, render: 132ms)
 ⚠ Cross origin request detected from 0f59dbac194f.ngrok-free.app to /_next/* resource. In a future major version of Next.js, you will need to explicitly configure "allowedDevOrigins" in next.config to allow this.
Read more: https://nextjs.org/docs/app/api-reference/config/next-config-js/allowedDevOrigins
[next-auth][warn][DEBUG_ENABLED] 
https://next-auth.js.org/warnings#debug_enabled
 GET /api/auth/session 200 in 685ms (compile: 673ms, render: 11ms)
 GET /register 200 in 376ms (compile: 358ms, render: 18ms)
 POST /api/auth/register 201 in 1659ms (compile: 190ms, render: 1468ms)
 GET /api/auth/providers 200 in 22ms (compile: 12ms, render: 9ms)
 GET /api/auth/csrf 200 in 6ms (compile: 1246µs, render: 5ms)
 POST /api/auth/callback/credentials 200 in 1689ms (compile: 1025µs, render: 1688ms)
 GET /api/auth/session 200 in 19ms (compile: 9ms, render: 11ms)
 GET / 200 in 33ms (compile: 5ms, render: 28ms)
 GET / 200 in 25ms (compile: 5ms, render: 20ms)
 GET /dashboard 200 in 206ms (compile: 186ms, proxy.ts: 2ms, render: 18ms)
 GET /dashboard 200 in 256ms (compile: 200ms, proxy.ts: 50ms, render: 7ms)
 GET /api/analytics/overview 200 in 1177ms (compile: 72ms, render: 1105ms)
 GET /api/companies 200 in 1588ms (compile: 95ms, render: 1493ms)
 GET /api/companies 200 in 1622ms (compile: 128ms, render: 1494ms)
 GET /api/analytics/overview 200 in 1743ms (compile: 108ms, render: 1635ms)
 GET /api/auth/session 200 in 11ms (compile: 4ms, render: 6ms)
 GET /dashboard/setup 200 in 237ms (compile: 216ms, proxy.ts: 12ms, render: 9ms)
 GET /dashboard/setup 200 in 175ms (compile: 148ms, proxy.ts: 4ms, render: 23ms)
 GET /api/auth/session 200 in 22ms (compile: 11ms, render: 11ms)
Finding leads with AI for campaign: cmi0h07kd0006elry63cn7w05
 POST /api/setup/complete 200 in 16.7s (compile: 777ms, render: 15.9s)
Updated call cmi0h0818000aelryhoaoydwp status to initiated
 POST /api/twilio/status 200 in 566ms (compile: 71ms, render: 495ms)
Updated call cmi0h0818000aelryhoaoydwp status to ringing
 POST /api/twilio/status 200 in 180ms (compile: 5ms, render: 175ms)
 GET /api/calls/cmi0h0818000aelryhoaoydwp/transcript 200 in 727ms (compile: 535ms, render: 192ms)
 GET /api/calls/cmi0h0818000aelryhoaoydwp/transcript 200 in 73ms (compile: 7ms, render: 66ms)
Updated call cmi0h0818000aelryhoaoydwp status to in-progress
 POST /api/twilio/status 200 in 285ms (compile: 4ms, render: 281ms)
 GET /api/calls/cmi0h0818000aelryhoaoydwp/transcript 200 in 182ms (compile: 5ms, render: 176ms)
 GET /api/calls/cmi0h0818000aelryhoaoydwp/transcript 200 in 83ms (compile: 18ms, render: 64ms)
 GET /api/calls/cmi0h0818000aelryhoaoydwp/transcript 200 in 102ms (compile: 11ms, render: 91ms)
 GET /api/calls/cmi0h0818000aelryhoaoydwp/transcript 200 in 109ms (compile: 7ms, render: 102ms)
Error finding leads with AI: SyntaxError: Unexpected token 'I', "I cannot p"... is not valid JSON
    at JSON.parse (<anonymous>)
    at findLeadsWithAI (src/lib/ai/lead-finder.ts:103:37)
    at async findAndAddLeads (src/app/api/setup/complete/route.ts:285:19)
  101 |
  102 |     // Parse the leads
> 103 |     const leads: FoundLead[] = JSON.parse(jsonContent);
      |                                     ^
  104 |
  105 |     // Validate and clean the data
  106 |     const validLeads = leads.filter(lead => 
Found 1 leads with AI
Successfully added 1 AI-found leads to campaign cmi0h07kd0006elry63cn7w05
 GET /api/calls/cmi0h0818000aelryhoaoydwp/transcript 200 in 114ms (compile: 9ms, render: 105ms)
 GET /api/calls/cmi0h0818000aelryhoaoydwp/transcript 200 in 221ms (compile: 8ms, render: 213ms)
 GET /api/calls/cmi0h0818000aelryhoaoydwp/transcript 200 in 117ms (compile: 7ms, render: 109ms)
Updated call cmi0h0818000aelryhoaoydwp status to completed
 POST /api/twilio/status 200 in 1617ms (compile: 812µs, render: 1616ms)
 GET /api/calls/cmi0h0818000aelryhoaoydwp/transcript 200 in 175ms (compile: 8ms, render: 167ms)
 GET /dashboard 200 in 43ms (compile: 5ms, proxy.ts: 20ms, render: 18ms)
 GET /api/companies 200 in 85ms (compile: 4ms, render: 81ms)
 GET /api/analytics/overview 200 in 302ms (compile: 5ms, render: 297ms)
 GET /api/companies 200 in 285ms (compile: 3ms, render: 283ms)
 GET /api/analytics/overview 200 in 371ms (compile: 7ms, render: 364ms)
 GET /dashboard/campaigns 200 in 219ms (compile: 196ms, proxy.ts: 10ms, render: 14ms)
 GET /api/campaigns 200 in 343ms (compile: 100ms, proxy.ts: 14ms, render: 229ms)
 GET /api/campaigns 200 in 348ms (compile: 98ms, proxy.ts: 16ms, render: 234ms)
 GET /api/auth/session 200 in 17ms (compile: 8ms, render: 9ms)
 GET /api/auth/session 200 in 22ms (compile: 11ms, render: 12ms)
 GET /api/auth/session 200 in 30ms (compile: 14ms, render: 16ms)
 GET / 307 in 68ms (compile: 10ms, render: 58ms)
 GET /dashboard 200 in 80ms (compile: 7ms, proxy.ts: 18ms, render: 55ms)
 GET /api/auth/session 200 in 12ms (compile: 3ms, render: 9ms)
 GET /api/companies 200 in 880ms (compile: 3ms, render: 878ms)
 GET /api/analytics/overview 200 in 1085ms (compile: 2ms, render: 1083ms)
 GET /api/auth/session 200 in 17ms (compile: 9ms, render: 7ms)
 GET /api/auth/session 200 in 19ms (compile: 9ms, render: 11ms)
 GET /api/auth/csrf 200 in 19ms (compile: 9ms, render: 10ms)
 POST /api/auth/signout 200 in 12ms (compile: 3ms, render: 9ms)
 GET /login 200 in 258ms (compile: 193ms, render: 64ms)
 GET /api/auth/session 200 in 11ms (compile: 5ms, render: 6ms)
 GET /register 200 in 25ms (compile: 5ms, render: 20ms)
 POST /api/auth/register 409 in 975ms (compile: 3ms, render: 972ms)
 POST /api/auth/register 201 in 673ms (compile: 3ms, render: 670ms)
 GET /api/auth/providers 200 in 17ms (compile: 8ms, render: 9ms)
 GET /api/auth/csrf 200 in 8ms (compile: 2ms, render: 5ms)
 POST /api/auth/callback/credentials 200 in 1113ms (compile: 1097µs, render: 1112ms)
 GET /api/auth/session 200 in 6ms (compile: 1713µs, render: 4ms)
 GET / 200 in 14ms (compile: 4ms, render: 10ms)
 GET / 200 in 10ms (compile: 963µs, render: 9ms)
 GET /dashboard 200 in 26ms (compile: 1818µs, proxy.ts: 4ms, render: 20ms)
 GET /dashboard 200 in 15ms (compile: 1388µs, proxy.ts: 3ms, render: 10ms)
 GET /api/companies 200 in 522ms (compile: 1060µs, render: 521ms)
 GET /dashboard/setup 200 in 34ms (compile: 6ms, proxy.ts: 12ms, render: 16ms)
 GET /api/analytics/overview 200 in 578ms (compile: 1035µs, render: 577ms)
 GET /api/companies 200 in 976ms (compile: 1114µs, render: 975ms)
 GET /dashboard/setup 200 in 36ms (compile: 6ms, proxy.ts: 13ms, render: 18ms)
 GET /api/analytics/overview 200 in 1161ms (compile: 706µs, render: 1160ms)
 GET /api/auth/session 200 in 13ms (compile: 4ms, render: 8ms)
 GET /api/auth/session 200 in 12ms (compile: 4ms, render: 8ms)
 GET /api/auth/session 200 in 13ms (compile: 5ms, render: 8ms)
Finding leads with AI for campaign: cmi0hdljh000jelrypb3ar1va
 POST /api/setup/complete 200 in 14.3s (compile: 5ms, render: 14.3s)
Updated call cmi0hdls9000nelryn0ebczzn status to initiated
 POST /api/twilio/status 200 in 640ms (compile: 7ms, render: 633ms)
Updated call cmi0hdls9000nelryn0ebczzn status to ringing
 POST /api/twilio/status 200 in 253ms (compile: 5ms, render: 248ms)
 GET /api/calls/cmi0hdls9000nelryn0ebczzn/transcript 200 in 188ms (compile: 8ms, render: 180ms)
 GET /api/calls/cmi0hdls9000nelryn0ebczzn/transcript 200 in 87ms (compile: 7ms, render: 80ms)
Updated call cmi0hdls9000nelryn0ebczzn status to in-progress
 POST /api/twilio/status 200 in 417ms (compile: 4ms, render: 413ms)
 GET /api/calls/cmi0hdls9000nelryn0ebczzn/transcript 200 in 292ms (compile: 10ms, render: 281ms)
 GET /api/calls/cmi0hdls9000nelryn0ebczzn/transcript 200 in 78ms (compile: 8ms, render: 70ms)
 GET /api/calls/cmi0hdls9000nelryn0ebczzn/transcript 200 in 77ms (compile: 5ms, render: 72ms)
 GET /api/calls/cmi0hdls9000nelryn0ebczzn/transcript 200 in 77ms (compile: 10ms, render: 67ms)
 GET /api/calls/cmi0hdls9000nelryn0ebczzn/transcript 200 in 83ms (compile: 7ms, render: 76ms)
 GET /api/calls/cmi0hdls9000nelryn0ebczzn/transcript 200 in 141ms (compile: 9ms, render: 132ms)
Found 0 valid leads out of 0 total
Found 0 leads with AI
Successfully added 0 AI-found leads to campaign cmi0hdljh000jelrypb3ar1va
 GET /api/calls/cmi0hdls9000nelryn0ebczzn/transcript 200 in 179ms (compile: 9ms, render: 171ms)
Updated call cmi0hdls9000nelryn0ebczzn status to completed
 POST /api/twilio/status 200 in 719ms (compile: 5ms, render: 713ms)
 GET /api/calls/cmi0hdls9000nelryn0ebczzn/transcript 200 in 84ms (compile: 8ms, render: 75ms)
